2010-10-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/stdlib.h,
	* device/lib/_atof.c,
	* device/lib/_atoi.c,
	* device/lib/_atol.c: fixed const in prototypes

2010-09-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c,
	  support/regression/tests/bug-3034585.c:
	  Fixed #3034585.

2010-09-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCerr.c,
	* src/SDCCerr.h: added W_DEPRECATED_OPTION
	* src/ds390/main.c,
	* src/mcs51/main.c,
	* src/SDCCmain.c (linkEdit): deprecated --no-pack-iram

2010-09-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/hc08/peeph.def:
	  Fixed #1715020.
	* src/SDCCerr.h,
	  src/z80/gen.c,
	  src/SDCCast.c:
	  Minor spelling corrections in comments.

2010-09-26 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCicode.c (geniCodeStruct): fixed bug 3029630
	* support/regression/tests/bug3029630.c: new, added

2010-09-24 Borut Razem <borut.razem AT siol.net>

	* device/include/mcs51/XC866.h: fixed copy & paste error in the comment

2010-09-22 Borut Razem <borut.razem AT siol.net>

	* device/include/mcs51/XC866.h, device/include/mcs51/reg764.h,
	  device/include/mcs51/at89s8253.h:
	  sdcc library license changed to GPL+LE

2010-09-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/doc/sdccman.lyx:
	  Fixed #3071726.

2010-09-19 Borut Razem <borut.razem AT siol.net>

	* support/regression/ports/pic14/spec.mk,
	  support/regression/ports/pic16/spec.mk,
	  support/regression/ports/ds390/spec.mk,
	  support/regression/ports/hc08/spec.mk,
	  support/regression/ports/ucz80/spec.mk,
	  support/regression/ports/mcs51-common/spec.mk:
	  fixed mingw32 cross compiled regression tests:
	  include top source directory when cross compiling,
	  launch win32 native simulator with wine,
	  removed wrong quotes, call build machine native timeout utility
	* src/SDCCmain.c, src/ds390/main.c:
	  ds390 default library path was wrong
	* src/SDCC.lex: implemented punctuators, as defined in
	  ISO/IEC 9899:1999, chapter 6.4.6#3